--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,4 +1,10 @@
-.h1{
+header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 30px;
+}
+header h1{
     font-size: 32px;
-    padding: 10px 15px;
+    color: blue;
 }
