--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -4,15 +4,11 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-
-.h3{
-    font-size: 24px;
-    padding: 0 35px;
-}
 .main{
-    padding: 15px 20px;
     display: flex;
     align-items: center;
+    justify-content: flex-start;
     flex-wrap: wrap;
     gap: 20px;
+    padding: 20px;
 }
